test/netlist/error/primitive-arity.bop
A(a) = c
where
  c = and(a);
end where;
